# StringTailor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: app.hpp  command.hpp  history.hpp  operands.hpp  operator.hpp
src/: app.cpp  command.cpp  history.cpp  main.cpp  operator.cpp
src/operands/: operand1.cpp  operand10.cpp  operand2.cpp  operand3.cpp  operand4.cpp  operand5.cpp  operand6.cpp  operand7.cpp  operand8.cpp  operand9.cpp
